k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticsol-logistics
  labels:
    name: ticsol-logistics
    environment: production
