k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ticsol-logistics
  labels:
    app: ticsol-backend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ticsol-backend
  sessionAffinity: None

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ticsol-logistics
  labels:
    app: ticsol-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ticsol-frontend
  sessionAffinity: None
